--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -13,7 +13,11 @@
         <nav>
           <ul class="navigation">
             <li>
-              <a class="navigation__link navigation__link--underlined" href="index.html">Home</a>
+              <a
+                class="navigation__link navigation__link--underlined"
+                href="index.html"
+                >Home</a
+              >
             </li>
             <li>
               <a class="navigation__link" href="library.html">My library</a>
@@ -26,9 +30,10 @@
           <input
             class="search-form__input"
             type="text"
-            name="searchQuery” placeholder="
+            name="searchQuery"
+            placeholder="
             Search
-            movies”
+            movies"
           />
           <button type="submit" class="search-button">
             <!-- <svg class="search-form__icon" width="12" height="12">
