--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="container">
     <p>
         © 2022 | All Rights Reserved | Developed with
         <svg class="footer__icon_logo" width="14" height="13" viewBox="0 0 14 13" fill="none"
