--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,54 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
+* {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
+.body {
+    margin: auto;
+    max-width: 100%;
+}
+
+.container {
+    margin: auto;
+    padding: 0px 20px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  body {
+    min-width: 320px;
+    max-width: 767px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  body {
+    min-width: 768px;
+    max-width: 1023px;
+  }
+  .container {
+    padding: 0 75px;
+  }
+
+  #main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    max-width: 1024px;
+  }
+  .container {
+    padding: 0px 71px;
+  }
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -23,3 +72,4 @@ ul {
     border: 1px solid #fff;
   }
 }
+
