--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -1,25 +1,23 @@
 <header>
+  <div class="header-div">
   <div class="container">
     <div id="hero" class="hero-header">
       <div class="hero-header__top">
-        <a class="logo" href="index.html">
-          <!-- <img
-            class="logo__img"
-            alt="Filmoteka logo"
-            src="./images/header/logo/logo.png"
-            srcset="./images/header/logo/logo@2x.png 2x"
-          /> -->
+        <a class="logo__link" href="index.html">
+          <svg class="logo__icon" width="24" height="24">
+            <use href="./images/icons_optimalised.svg#icon-film"></use>
+          </svg>
         </a>
         <nav>
           <ul class="navigation">
-            <li>
+            <li class="navigation__item">
               <a
                 class="navigation__link navigation__link--underlined"
                 href="index.html"
                 >Home</a
               >
             </li>
-            <li>
+            <li class="navigation__item">
               <a class="navigation__link" href="library.html">My library</a>
             </li>
           </ul>
@@ -43,5 +41,6 @@
         </form>
       </div>
     </div>
+  </div>
   </div>
 </header>
