--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -6,52 +6,43 @@
   margin: 0px;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 .body {
-    margin: auto;
-    max-width: 100%;
+  margin: auto;
 }
 
 .container {
-    margin: auto;
-    padding: 0px 20px;
+  min-width: 320px;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0px 20px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  body {
-    min-width: 320px;
-    max-width: 767px;
-  }
+.film-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  body {
-    min-width: 768px;
-    max-width: 1023px;
-  }
   .container {
     padding: 0 75px;
   }
 
-  #main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .film-cards {
     gap: 30px;
-}
+  }
 }
 
 @media screen and (min-width: 1024px) {
-  body {
-    max-width: 1024px;
-  }
   .container {
     padding: 0px 71px;
   }
-}
-
-ul {
-  margin: 0;
-  padding: 0;
 }
 
 .button {
@@ -60,16 +51,15 @@ ul {
   padding-bottom: 12px;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
+  color: getColor('basic-color');
 
   &--active {
     border: none;
-    background-color: #ff6b01;
+    background-color: getColor('button-color');
   }
 
   &--inactive {
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 1px solid getColor('basic-color');
   }
 }
-
