--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -1,12 +1,12 @@
 $colors: (
   'main-color': #000000,
-  'second-main': #FF6B08, 
-  'basic-color': #FFFFFF,
+  'second-main': #ff6b08,
+  'basic-color': #ffffff,
   'background': #e5e5e5,
   'second-background': #f7f7f7,
   'error-color': #ff001b,
   'button-color': #ff6b01,
-  'additional-color' : #8C8C8C,
+  'additional-color': #8c8c8c,
   'copyright-info': #545454,
 );
 
