--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -1,12 +1,13 @@
 <header>
-  <div class="header-div">
+  <div class="header-library">
     <div class="container">
       <div id="library" class="hero-header">
         <div class="hero-header__top">
-          <a class="logo" href="index.html">
+          <a class="logo__link" href="index.html">
             <svg class="logo__icon" width="24" height="24">
               <use href="./images/icons_optimalised.svg#icon-film"></use>
             </svg>
+            <span class="logo__text">Filmoteka</span>
           </a>
           <nav>
             <ul class="navigation">
