--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,5 @@
 <main class="container">
-  <div class="gallery"></div>
+  <div class="container">
+    <div class="film-cards">main</div>
+  </div>
 </main>
