--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,4 +1,5 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+@import '../utils/variables';
 
 * {
   box-sizing: border-box;
@@ -12,7 +13,10 @@ ul {
 }
 
 .body {
-  margin: auto;
+  margin: 0 auto;
+  font-family: getFont('main-font'), sans-serif;
+  color: getColor('main-color');
+  font-size: 12px;
 }
 
 .container {
