--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,5 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-@import '../utils/variables';
+@import './utils/variables';
 
 * {
   box-sizing: border-box;
