--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -82,7 +82,7 @@
 
   .logo__text {
     display: block;
-    font-family: getFont('main-font');
+    font-family: getFont("main-font");
     font-weight: 500;
     font-size: 30px;
     line-height: 1.17;
