--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,6 @@
 <main>
   <div class="container">
     <div class="film-cards"></div>
+    <div class="film-cards__pagination"></div>
   </div>
 </main>
