--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -21,7 +21,7 @@
       
     }
 .right {
-             background-image: url("../images/left-arrow.svg");
+             background-image: url("../images/right_arrow.svg");
         
          }
 
