--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -1,35 +1,40 @@
 .film-cards__pagination{
+    display: flex;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    justify-items: center;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    align-items: center;
     justify-content: center;
 }
-.pagination_icon{
-    fill: #FF34Fa;
-    // background-image: url("../images/icons_optimalised.svg#icon-arrow-left2");
-    
+.pagination{
+    &__arrow{
     background-repeat: no-repeat;
     background-color: transparent;
-   
-    height: 40px;
-    width: 40px;
+    background-color: getColor('second-background');
     background-position: 50%;
 }
+    
+    &__button{
+        border-radius: 5px;
+        padding-top: 14px;
+        font-size: 12px;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        &--number {
+                padding-top: 14px;
+                
+                background-color: red;//transparent;
+
+            }
+        
+        }
+}
+
 .left{
         background-image: url("../images/left-arrow.svg");
-      
+        
     }
 .right {
              background-image: url("../images/right_arrow.svg");
-        
          }
-
-.pagination_number{
-    margin: 0;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    background-color: transparent;
-  background-position: 50%;
-}
