--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -27,10 +27,13 @@ ul {
 }
 
 .film-cards {
+  padding-top: 20px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -39,6 +42,11 @@ ul {
   }
 
   .film-cards {
+    padding-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
     gap: 30px;
   }
 }
@@ -46,6 +54,14 @@ ul {
 @media screen and (min-width: 1024px) {
   .container {
     padding: 0px 71px;
+  }
+  .film-cards {
+    padding-top: 60px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
   }
 }
 
