--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
-@import './utils/variables.scss';
-@import "./pagination";
+@import './utils/variables';
+@import './pagination';
 @import './common';
 @import './header';
 @import './main';
