--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,5 +3,6 @@
 @import './common';
 @import './header';
 @import './main';
+@import './loader-spinner';
 @import './movie-cards';
 @import './footer';
