update rendering cards - genre

--- a/src/sass/_movie-cards.scss
+++ b/src/sass/_movie-cards.scss
@@ -29,6 +29,7 @@
     text-transform: uppercase;
     font-weight: 500;
     line-height: 1.33;
+    overflow: hidden;
   }
   &__adds {
     display: inline;
