--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -59,7 +59,7 @@ ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 30px;
   }
 }
