library\movies-rendering
Karty renderują się (prawie) poprawnie. Kilka rzeczy do poprawki oczywiście. Trzeba dodać automatyczne renderowanie kart po wejściu w "My Library" i poprawić problem z gatunkami. Dodatkowo dochodzi optymalizacja i opisanie kodu no próba spięcia wszystkiego normalnie w indexy.

--- a/src/partials/header-library.html
+++ b/src/partials/header-library.html
@@ -25,8 +25,12 @@
           </nav>
         </div>
         <div class="hero-header__buttons">
-          <button class="button button--active" type="button">Watched</button>
-          <button class="button button--inactive" type="button">Queue</button>
+          <button class="button button--active" type="button" loadWatched>
+            Watched
+          </button>
+          <button class="button button--inactive" type="button" loadQueued>
+            Queue
+          </button>
         </div>
       </div>
     </div>
