--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -33,9 +33,14 @@ ul {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+
+  &--loader {
+    justify-content: center;
+    padding: 100px;
+  }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) {
   .container {
     padding: 0 75px;
   }
@@ -47,20 +52,17 @@ ul {
     flex-direction: row;
     justify-content: space-between;
     gap: 30px;
+
+    &--loader {
+      justify-content: center;
+      padding: 100px;
+    }
   }
 }
 
 @media screen and (min-width: 1024px) {
   .container {
     padding: 0px 71px;
-  }
-  .film-cards {
-    padding-top: 60px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 30px;
   }
 }
 
