correction to .film-cards desktop

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -64,6 +64,14 @@ ul {
   .container {
     padding: 0px 71px;
   }
+
+  .film-cards {
+    justify-content: flex-start;
+
+    &--loader {
+      justify-content: center;
+    }
+  }
 }
 
 .button {
