--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/mixin';
 @import './pagination';
 @import './common';
 @import './header';
@@ -6,3 +7,4 @@
 @import './loader-spinner';
 @import './movie-cards';
 @import './footer';
+@import './modal';
