--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -11,20 +11,20 @@
                     <ul class="details-list list">
                         <li class="details-list__item">
                             <p class="details-list_title">Vote / Votes</p>
-                            <span class="details-list__information-1">vote_average</span>&nbsp/&nbsp<span
-                                class="details-list__information-2">vote_count</span>
+                            <span class="details-list__info1">vote_average</span>&nbsp/&nbsp<span
+                                class="details-list__info2">vote_count</span>
                         </li>
                         <li class="details-list__item">
                             <p class="details-list_title">Popularity</p>
-                            <span class="details-list__information-2">popularity</span>
+                            <span class="details-list__info2">popularity</span>
                         </li>
                         <li class="details-list__item">
                             <p class="details-list_title">Original Title</p>
-                            <span class="details-list__information-2 ">original_title</span>
+                            <span class="details-list__info2 ">original_title</span>
                         </li>
                         <li class="details-list__item">
                             <p class="details-list_title">Genre</p>
-                            <span class="details-list__information-2"></span>
+                            <span class="details-list__info2"></span>
                         </li>
                     </ul>
                     <h3 class="film-details__secondary-title">About</h3>
