--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -4,7 +4,7 @@
             <use href="/src/images/icons.svg#icon-x"></use>
         </svg>
         <div class="modal-content">
-            <div class="modal-container-film">
+            <!-- <div class="modal-container-film">
                 <img class="modal-img"/>
                 <div class="film-details">
                     <h2 class="film-details__main-title">original_title</h2>
@@ -32,7 +32,7 @@
                     <ul class="buttons-list list">
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
