--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -177,7 +177,8 @@
 }
 
 .button {
-    width: 100%;
+    width: 136px;
+    height: 44px;
     border-radius: 5px;
     padding-top: 14px;
     padding-bottom: 12px;
