--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -186,9 +186,11 @@ margin-top: 20px;
     font-size: 12px;
     line-height: 1.66;
 }
-
+.adds_buttons {
+    display:inline;
+}
 .button {
-    width: 136px;
+    width: 112.58px;
     height: 44px;
     
     margin-top: 21px;
