--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -189,7 +189,7 @@ margin-top: 20px;
 .adds_buttons {
     display:inline;
 }
-.button {
+.button--modal {
     width: 112.58px;
     height: 44px;
     
@@ -197,8 +197,10 @@ margin-top: 20px;
     margin-right: 15px;
     
    color: getColor('main-color');
-
-    &--active {
+border: 1px solid getColor('main-color');
+    &:hover,
+        &:focus,
+        &--active {
         border: none;
         background-color: getColor('button-color');
         color: getColor('basic-color');
