--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -1,36 +1,41 @@
 $mobile: 320px;
 $tablet: 768px;
-$desktop: 1280px;
+$desktop: 1024px;
 
-@mixin transition($one: all, $two: null, $three: null, $time: 250ms, $func: cubic-bezier(0.4, 0, 0.2, 1)) {
-    transition-property: $one, $two, $three;
-    transition-duration: $time;
-    transition-timing-function: $func;
+@mixin transition(
+  $one: all,
+  $two: null,
+  $three: null,
+  $time: 250ms,
+  $func: cubic-bezier(0.4, 0, 0.2, 1)
+) {
+  transition-property: $one, $two, $three;
+  transition-duration: $time;
+  transition-timing-function: $func;
 }
 
 @mixin mobile {
-    @media screen and (min-width: $mobile) {
-        @content;
-    }
+  @media screen and (min-width: $mobile) {
+    @content;
+  }
 }
 
 @mixin tablet {
-    @media screen and (min-width: $tablet) {
-        @content;
-    }
+  @media screen and (min-width: $tablet) {
+    @content;
+  }
 }
 
 @mixin desktop {
-    @media screen and (min-width: $desktop) {
-        @content;
-    }
+  @media screen and (min-width: $desktop) {
+    @content;
+  }
 }
 
 @mixin retina {
-
-    @media (min-device-pixel-ratio: 2),
+  @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        @content;
-    }
+    @content;
+  }
 }
