--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,6 +5,6 @@
         <use href="./images/icons_optimalised.svg#icon-heart"></use>
 
     </svg>
-    by <a href class="team-link" data-action="open-modal-teamlist">GoIT Students</a>
+    by <span class="team-link" >GoIT Students</span>
     </p>
 </footer>
