--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -211,3 +211,7 @@ border: 1px solid getColor('main-color');
         border: 1px solid getColor('main-color');
     }
 }
+
+.team-details__list {
+    list-style: none;
+}
