--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -4,35 +4,71 @@
             <use href="/src/images/icons.svg#icon-x"></use>
         </svg>
         <div class="modal-content">
-            <!-- <div class="modal-container-film">
-                <img class="modal-img"/>
-                <div class="film-details">
-                    <h2 class="film-details__main-title">original_title</h2>
-                    <ul class="details-list list">
-                        <li class="details-list__item">
-                            <p class="details-list_title">Vote / Votes</p>
-                            <span class="details-list__info1">vote_average</span>&nbsp/&nbsp<span
-                                class="details-list__info2">vote_count</span>
-                        </li>
-                        <li class="details-list__item">
-                            <p class="details-list_title">Popularity</p>
-                            <span class="details-list__info2">popularity</span>
-                        </li>
-                        <li class="details-list__item">
-                            <p class="details-list_title">Original Title</p>
-                            <span class="details-list__info2 ">original_title</span>
-                        </li>
-                        <li class="details-list__item">
-                            <p class="details-list_title">Genre</p>
-                            <span class="details-list__info2"></span>
-                        </li>
-                    </ul>
-                    <h3 class="film-details__secondary-title">About</h3>
-                    <p class="film-details__about">overview</p>
-                    <ul class="buttons-list list">
-                    </ul>
-                </div>
-            </div> -->
+            <div class="team-details">
+                <h2 class="team-details__title"> Mellow Yellow Team </h2>
+                <ul class="team-details__list list">
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/malgorzata.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Małgorzata Marczyńska</h3>
+                        <p class="team-details_role">Team Lider / Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/dorota.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Dorota Domańska</h3>
+                        <p class="team-details_role">Scrum Master / Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/szymon.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Szymon Dymański</h3>
+                        <p class="team-details_role">GitHub Specialist / Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/marta.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Marta Domżalska</h3>
+                        <p class="team-details_role">Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/mateusz.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Mateusz Martin</h3>
+                        <p class="team-details_role">Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                    <li class="team-details__item">
+                <figure>
+                <img class="team_img" src='./images/krzysztof.jpg' 
+                        loading='lazy' />
+                    <figcaption>
+                        <h3 class="team-details__name">Krzysztof Flisikowski</h3>
+                        <p class="team-details_role">Developer</p>
+                    </figcaption>
+                    </figure>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
