--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -216,5 +216,6 @@ border: 1px solid getColor('main-color');
     list-style: none;
 }
 .team_img {
-    width: 512px;
+    width: 240px;
+    height: auto;
 }
