--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -225,3 +225,6 @@ border: 1px solid getColor('main-color');
     width: 200px;
     height: auto;
 }
+.team-details__name {
+    font-size: 16px;
+}
