modal team working

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -4,7 +4,7 @@
             <use href="/src/images/icons.svg#icon-x"></use>
         </svg>
         <div class="modal-content">
-            <div class="team-details">
+            <!-- <div class="team-details">
                 <h2 class="team-details__title"> Mellow Yellow Team </h2>
                 <ul class="team-details__list list">
                     <li class="team-details__item">
@@ -62,7 +62,7 @@
                         </figure>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
