--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -42,7 +42,7 @@
 
     @include tablet {
         max-width: none;
-        width: 700px;
+        width: 618px;
         overflow-y: hidden;
         height: auto;
     }
@@ -210,6 +210,12 @@ border: 1px solid getColor('main-color');
         background-color: transparent;
         border: 1px solid getColor('main-color');
     }
+        @include tablet {
+            width: 125px;
+        }
+                @include desktop {
+                    width: 136px;
+                }
 }
 .team-details__title{
 object-position: center;
