--- a/src/sass/_movie-cards.scss
+++ b/src/sass/_movie-cards.scss
@@ -11,7 +11,11 @@
     margin-bottom: 10px;
     border-radius: 5px;
     overflow: hidden;
-  
+  &:hover,
+  &:focus {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
     &--modal {
       max-width: 240px;
     }
