--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -153,7 +153,7 @@
   border-bottom: 0.5px solid getColor('basic-color');
   padding-bottom: 4px;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   margin-bottom: 54px;
 }
 
@@ -166,6 +166,7 @@
   font-size: 14px;
   line-height: 1.14;
   color: getColor('basic-color');
+  width: 100%;
 
   &::placeholder {
     color: getColor('basic-color');
