--- a/src/sass/_movie-cards.scss
+++ b/src/sass/_movie-cards.scss
@@ -13,6 +13,7 @@
     overflow: hidden;
   &:hover,
   &:focus {
+    cursor: pointer;
       transform: scale(1.05);
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
